Ancora altre modifiche ed correz.